2003-05-20 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Even better estimation of max kz.

2003-05-16 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Better estimation of max kz.

2003-05-16 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Better elimination of bogus estimates.

2003-05-16 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Speed up.

2003-05-09 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Reduce zero threshold.

2003-05-09 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Fix memory management bug.

2003-04-14 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.h: Better TM estimate.
	* slab.cpp: Ditto.

2003-04-14 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.h: Add RCWA estimate.
	* slab.cpp: Ditto.

2003-03-28 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Relax zero check.

2003-03-24 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Improve handling of false zeros.

2003-03-07 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Tune series solver.
	* slabdisp.cpp: Ditto.

2003-02-17 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.h: Add series solver.
	* slab.cpp: Ditto.
	* slaboverlap.cpp: Ditto.
	* slaboverlap.h: Ditto.

2003-01-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Make insensitive to whether E_wall is explicitly set.

2003-01-17 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabdisp.cpp: Better criterion for scaling.

2002-12-20 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.h: Add get_cos, get_sin.
	* slabmode.cpp: Ditto.

2002-12-12 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Consolidate signed_sqrt.

2002-12-02 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Switch to enable backward modes.

2002-12-02 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Tmp disable backward modes.

2002-11-27 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
