@@ -80,7 +80,7 @@ class Slab_M : public SlabImpl
     std::vector<Complex> estimate_kz2_from_RCWA();
     std::vector<Complex> estimate_kz2_from_uniform_modes();      
 
-    void build_modeset(const std::vector<Complex>& kt);
+    void build_modeset(std::vector<Complex>& kt);
 
     std::vector<Complex> params; // Last parameters of dispersion relation.
     
