@@ -1,3 +1,10 @@
+2003-07-11 Peter Bienstman  <Peter.Bienstman@ugent.be>
+
+	* slab.h: Better calculation of mode profiles.
+	* slab.cpp: Ditto.
+	* slabmode.h: Ditto.
+	* slabmode.cpp: Ditto.
+
 2003-05-20 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* slab.cpp: Even better estimation of max kz.
